--- a/WpfApp1223/WpfApp1223/MainWindow.xaml
+++ b/WpfApp1223/WpfApp1223/MainWindow.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="500" Width="500" 
         WindowStyle="None" ResizeMode="NoResize"  
-        Background="Transparent">
+        Background="Transparent"
+        AllowsTransparency="True">
 
     <Window.Resources>
         <Style TargetType="{x:Type Button}">
