--- a/WpfApp1223/WpfApp1223/MainWindow.xaml
+++ b/WpfApp1223/WpfApp1223/MainWindow.xaml
@@ -170,7 +170,7 @@
                 <ColumnDefinition Width="11*"/>
                 <ColumnDefinition Width="21*"/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="button"   HorizontalAlignment="Left" Height="234.554" Margin="117.002,-11.442,0,0" VerticalAlignment="Top" Width="223.113" Grid.ColumnSpan="2" RenderTransformOrigin="0.5,0.5" Click="button_Click_1">
+            <Button x:Name="button"   HorizontalAlignment="Left" Height="234.554" Margin="117.002,-11.442,0,0" VerticalAlignment="Top" Width="223.113" Grid.ColumnSpan="2" RenderTransformOrigin="0.5,0.5" Click="button_Click_1" Template="{DynamicResource ButtonControlTemplate1}">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -190,7 +190,7 @@
                     </Image.RenderTransform>
                 </Image>
             </Button>
-            <Button   HorizontalAlignment="Left" Height="234.488" Margin="34.382,9.879,0,0" VerticalAlignment="Top" Width="223.113" RenderTransformOrigin="0.5,0.5" Grid.Column="1" Click="Button_Click_2">
+            <Button   HorizontalAlignment="Left" Height="234.488" Margin="34.382,9.879,0,0" VerticalAlignment="Top" Width="223.113" RenderTransformOrigin="0.5,0.5" Grid.Column="1" Click="Button_Click_2" Template="{DynamicResource ButtonControlTemplate1}">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -212,7 +212,7 @@
             </Button>
 
 
-            <Button  HorizontalAlignment="Left" Height="243.875" Margin="37.219,14.457,0,0" VerticalAlignment="Top" Width="223.293" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="2" Click="Button_Click">
+            <Button  HorizontalAlignment="Left" Height="243.875" Margin="37.219,14.457,0,0" VerticalAlignment="Top" Width="223.293" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="2" Click="Button_Click" Template="{DynamicResource ButtonControlTemplate1}">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -233,7 +233,7 @@
                 </Image>
             </Button>
 
-            <Button  HorizontalAlignment="Left" Height="234.591" Margin="85.812,79.244,0,0" VerticalAlignment="Top" Width="223.293" Grid.Column="1" RenderTransformOrigin="0.5,0.5">
+            <Button  HorizontalAlignment="Left" Height="234.591" Margin="85.812,79.244,0,0" VerticalAlignment="Top" Width="223.293" Grid.Column="1" RenderTransformOrigin="0.5,0.5" Template="{DynamicResource ButtonControlTemplate1}">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -254,7 +254,7 @@
                 </Image>
             </Button>
 
-            <Button  HorizontalAlignment="Left" Height="234.591" Margin="82.437,167.345,0,0" VerticalAlignment="Top" Width="223.293" RenderTransformOrigin="0.5,0.5" Grid.Column="1">
+            <Button  HorizontalAlignment="Left" Height="234.591" Margin="82.437,167.345,0,0" VerticalAlignment="Top" Width="223.293" RenderTransformOrigin="0.5,0.5" Grid.Column="1" Template="{DynamicResource ButtonControlTemplate1}">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -275,7 +275,7 @@
                 </Image>
             </Button>
 
-            <Button  HorizontalAlignment="Left" Height="234.591" Margin="25.228,237.697,0,0" VerticalAlignment="Top" Width="223.293" RenderTransformOrigin="0.5,0.5" Grid.Column="1">
+            <Button  HorizontalAlignment="Left" Height="234.591" Margin="25.228,237.697,0,0" VerticalAlignment="Top" Width="223.293" RenderTransformOrigin="0.5,0.5" Grid.Column="1" Template="{DynamicResource ButtonControlTemplate1}">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -296,7 +296,7 @@
                 </Image>
             </Button>
 
-            <Button  HorizontalAlignment="Left" Height="238.371" Margin="102.446,244.975,0,-3.346" VerticalAlignment="Top" Width="224.945" Grid.ColumnSpan="2" RenderTransformOrigin="0.5,0.5">
+            <Button  HorizontalAlignment="Left" Height="238.371" Margin="102.446,244.975,0,-3.346" VerticalAlignment="Top" Width="224.945" Grid.ColumnSpan="2" RenderTransformOrigin="0.5,0.5" Template="{DynamicResource ButtonControlTemplate1}">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
