--- a/WpfApp1223/WpfApp1223/MainWindow.xaml
+++ b/WpfApp1223/WpfApp1223/MainWindow.xaml
@@ -170,6 +170,11 @@
                 <ColumnDefinition Width="11*"/>
                 <ColumnDefinition Width="21*"/>
             </Grid.ColumnDefinitions>
+            <Button  HorizontalAlignment="Left" Margin="22,167,0,0" VerticalAlignment="Top" Width="133" Height="210">
+                <Button.Background>
+                    <ImageBrush ImageSource="pack://siteoforigin:,,,/NewFolder1/DanyaPhoto.jpg"/>
+                </Button.Background>
+            </Button>
             <Button x:Name="button"   HorizontalAlignment="Left" Height="234.554" Margin="117.002,-11.442,0,0" VerticalAlignment="Top" Width="223.113" Grid.ColumnSpan="2" RenderTransformOrigin="0.5,0.5" Click="button_Click_1" Template="{DynamicResource ButtonControlTemplate1}">
                 <Button.RenderTransform>
                     <TransformGroup>
@@ -376,6 +381,8 @@
                         <GradientStop Color="#FF9EBB18" Offset="1"/>
                     </LinearGradientBrush>
                 </TextBlock.Foreground><Run Background="#FF15A8D3" Text="LOL"/></TextBlock>
+            <Button Content="Button" HorizontalAlignment="Left" Margin="-222,180,0,0" VerticalAlignment="Top" Width="75"/>
+
 
         </Grid>
 
