--- a/WpfApp1223/WpfApp1223/MB.xaml
+++ b/WpfApp1223/WpfApp1223/MB.xaml
@@ -5,9 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MB" Height="300" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" WindowStyle="None">
+        Title="MB" Height="300" Width="300" WindowStyle="None" ResizeMode="NoResize">
     <Grid>
-        <Image Width="300" Height="300" Source="Resources\данил.png" Stretch="Fill" ></Image>
-        <Button x:Name="bt_Ok" Content="Ok" Width="50" Height="30" Padding="4" Margin="15" VerticalAlignment="Bottom" HorizontalAlignment="Center" Click="bt_Ok_Click"></Button>
+        <TextBlock Background="Transparent" Text="Кликай на те участки пицци которые не ест Даня" Panel.ZIndex="100" TextWrapping="Wrap" FontSize="32" FontWeight="Bold" LineStackingStrategy="BlockLineHeight" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Image Source="Resources\danil.png" Stretch="Fill"></Image>
+        <Button Content="Ok" x:Name="bt_Ok" Width="50" Height="30" Margin="15" VerticalAlignment="Bottom" HorizontalAlignment="Center" Click="bt_Ok_Click"></Button>
     </Grid>
 </Window>
